name:                yesod-form-remote
version:             0.0.1
synopsis:            Form handling for Yesod API's
description:         Please see README.md
homepage:            https://github.com/paramanders/yesod-form-remote
license:             MIT
license-file:        LICENSE
author:              Mats Rietdijk <matsrietdijk@gmail.com>
maintainer:          Mats Rietdijk <matsrietdijk@gmail.com>
category:            Web, Yesod
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Yesod.Form.Remote
  build-depends:       base >= 4.7 && < 5
                     , yesod-core
                     , yesod-form
                     , containers
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , yesod-form-remote
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/paramanders/yesod-form-remote
